instance1/temp-retrieve/objects/API_Order_Product_Config__mdt/API_Order_Product_Config__mdt.object-meta.xml
<CustomObject>
    <label>API Order Product Config</label>
    <pluralLabel>API Order Product Configs</pluralLabel>
</CustomObject>