instance1/temp-retrieve/objects/API_Order_Product_Config__mdt/fields/Opportunity_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Conversion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opportunity Conversion</label>
    <type>Checkbox</type>
</CustomField>