instance1/temp-retrieve/objects/API_Order_Product_Config__mdt/fields/Sub_Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Sub_Product_Family__c</fullName>
    <description>Product 2 Sub Product Family value</description>
    <inlineHelpText>Product 2 Sub Product Family value</inlineHelpText>
    <label>Sub Product Family</label>
    <length>255</length>
    <type>Text</type>
</CustomField>