instance1/temp-retrieve/objects/API_Order_Product_Config__mdt/fields/Virtual_SKU__c.field-meta.xml
<CustomField>
    <fullName>Virtual_SKU__c</fullName>
    <description>Value from Product2 StockKeepingUnit</description>
    <inlineHelpText>Value from Product2 StockKeepingUnit</inlineHelpText>
    <label>Virtual SKU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>